tests/spec/parse/snapshots/or_pattern_with_bindings.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    match opt {
      Some(x) | None => 0,
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "opt",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 3,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Option",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 21,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 14,
                            byte_length: 11,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 30,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "opt",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 44,
                                byte_length: 3,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        EnumVariant {
                                            identifier: "Some",
                                            fields: [
                                                Identifier {
                                                    identifier: "x",
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 59,
                                                        byte_length: 1,
                                                    },
                                                    binding: None,
                                                },
                                            ],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 54,
                                                byte_length: 7,
                                            },
                                        },
                                        EnumVariant {
                                            identifier: "None",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 64,
                                                byte_length: 4,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 54,
                                        byte_length: 14,
                                    },
                                },
                                expression: Literal {
                                    literal: Integer {
                                        value: 0,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 72,
                                        byte_length: 1,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 38,
                            byte_length: 40,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 34,
                    byte_length: 46,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 79,
        },
    },
]
